# libwinpos

./: .clang-format  CMakeLists.txt  LICENSE  README.md  RELEASE  autoformat.sh  meson.build  meson_options.txt
.github/workflows/: build.yml
cmake/: WinposQtConfig.cmake.in
examples/: CMakeLists.txt  demowindow.cpp  demowindow.h  main.cpp  meson.build
src/: CMakeLists.txt  manager.cpp  meson.build  windowpositioner.cpp  zone.cpp  zoneitem.cpp
src/Winpos/: Manager.h  WindowPositioner.h  Zone.h  ZoneItem.h  winposqt_export.h
